V1 of the React Native Weather App

--- a/app.json
+++ b/app.json
@@ -1,32 +1,40 @@
 {
-  "expo": {
-    "name": "Weather-React-Native",
-    "slug": "Weather-React-Native",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "expo": {
+        "name": "Weather-React-Native",
+        "slug": "Weather-React-Native",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "entryPoint": "./src/App.tsx",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "package": "com.omartinez.reactnativeweatherapp",
+            "versionCode": 1,
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#FFFFFF"
+            }
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "extra": {
+            "comment": "this is a portfolio project with only free tier API keys so it's fine if they go out into the wild, no credit cards are associated with the accounts",
+            "open_cage_api_key": "219f2d2d4a4e4e37b0e59dea369253f8",
+            "open_weather_icon_endpoint": "https://openweathermap.org/img/wn/{icon_id}@2x.png",
+            "open_weather_api_endpoint": "https://api.openweathermap.org/data/2.5/onecall?lat={lat}&lon={lon}&APPID=fab1058b3bad098c237e3674721625c9&exclude=minutely,alerts"
+        },
+        "description": ""
     }
-  }
 }
