--- a/package.json
+++ b/package.json
@@ -1,26 +1,52 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "lint": "eslint src --fix --ext .ts,.tsx,.js"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
+    },
+    "dependencies": {
+        "@react-native-community/geolocation": "^2.0.2",
+        "axios": "^0.21.1",
+        "expo": "~40.0.0",
+        "expo-constants": "~9.3.3",
+        "expo-device": "~2.4.0",
+        "expo-location": "~10.0.0",
+        "expo-status-bar": "~1.0.3",
+        "husky": "^4.3.7",
+        "opencage-api-client": "^0.10.0",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+        "react-native-chart-kit": "^6.9.0",
+        "react-native-svg": "12.1.0",
+        "react-native-switch-selector": "^2.0.6",
+        "react-native-toggle-element": "^1.0.1",
+        "react-native-web": "~0.13.12"
+    },
+    "devDependencies": {
+        "@babel/core": "~7.9.0",
+        "@types/react": "~16.9.35",
+        "@types/react-dom": "~16.9.8",
+        "@types/react-native": "~0.63.2",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
+        "eslint": "^7.17.0",
+        "eslint-config-alloy": "^3.10.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "prettier": "^2.2.1",
+        "pretty-quick": "^3.1.0",
+        "typescript": "~4.0.0"
+    },
+    "private": true
 }
